Move over from DigitalOcean

--- a/index.html
+++ b/index.html
@@ -1,1 +1,214 @@
-Hello World
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html>
+<head>
+
+	<title>Sun Woo Kim | kimsunw@umail.iu.edu</title>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+
+	<meta name="keywords" content="" />
+	<meta name="description" content="" />
+
+	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" media="all" /> 
+	<link rel="stylesheet" type="text/css" href="resume.css" media="all" />
+
+</head>
+<body>
+
+<div id="doc2" class="yui-t7">
+	<div id="inner">
+	
+		<div id="hd">
+			<div class="yui-gc">
+				<center><img src="sunwoo.jpg" alt="Sun Woo" style="width:304px;height:270px;"></center>
+				<div class="yui-u first">
+					<h1>Sun Woo Kim</h1>
+					<h2><a href="http://104.236.39.19/blog/blog.html">Blog</a></h2>
+				</div>
+
+				<div class="yui-u">
+					<div class="contact-info">
+						<!--<h3><img src="http://www.icon2s.com/img16/16x16-social-email-icon.png"><a href="mailto:kimsunw@umail.iu.edu">kimsunw@umail.iu.edu</a></h3> -->
+						<h3><a href="mailto:kimsunw@umail.iu.edu">kimsunw@umail.iu.edu</a></h3>
+						<h3>(434) - 987-9753</h3>
+						<!-- <h3><img src="https://camo.githubusercontent.com/c9774aeb9b8e2a28455c424db7e98f8a12989dfb/687474703a2f2f6f6935372e74696e797069632e636f6d2f323471367976342e6a7067"><a href="https://github.com/sunwookimuiuc">Go to Github</a></h3> -->
+						<h3><a href="https://github.com/sunwookimuiuc">Go to Github</a></h3>
+						<!-- <h3><img src="http://megaicons.net/static/img/icons_sizes/182/456/16/linkedin-icon.png"><a href="https://www.linkedin.com/in/kim392">Go to LinkedIn</a></h3> -->
+						<h3><a href="https://www.linkedin.com/in/kim392">Go to LinkedIn</a></h3>
+					</div><!--// .contact-info -->
+				</div>
+			</div><!--// .yui-gc -->
+		</div><!--// hd -->
+
+		<div id="bd">
+			<div id="yui-main">
+				<div class="yui-b">
+
+					<div class="yui-gf">
+						<div class="yui-u first">
+							<h2>Education</h2>
+						</div>
+						<div class="yui-u">
+							<h2>Indiana University Bloomington</h2>
+							<h3>PhD, Computer Science &mdash; 3.76 GPA </h3>
+							<p><br></p>
+						</div>
+						<div class="yui-u">
+							<h2>University of Illinois at Urbana-Champaign</h2>
+							<h3>BS, Physics &mdash; 3.34 GPA </h3>
+						</div>
+					</div><!--// .yui-gf -->
+					
+					<div class="yui-gf">
+	
+						<div class="yui-u first">
+							<h2>Experience</h2>
+						</div><!--// .yui-u -->
+
+						<div class="yui-u">
+
+							<div class="job">
+								<h2>National Center for Supercomputing Applications</h2>
+								<h3>Urbana, IL</h3>
+								<h3>CyberGIS SPIN Intern</h3>
+								<h4>5/2015 - Present</h4>
+								<ul>
+									<li>Designed and developed a parallel program employed in CyberGIS Summer School on Big Data Landscapes</li>
+									<li>Tested performance of ROGER supercomputer through the portable batch system (PBS) with Intel benchmarks</li>
+									<li>Actively communicated and followed up with members of other NCSA departments to promote updating the cluster for further expansion of frameworks available to all ROGER users </li>
+									<li>Experimented on the Hadoop cluster with TeraSort and Starfish to adjust parameters for optimal performance</li>
+									<li>Prepared and demonstrated development results to an audience of more than 20 professionals of various areas</li>
+								</ul>
+							</div>
+
+
+
+						</div><!--// .yui-u -->
+					</div><!--// .yui-gf -->
+
+					<div class="yui-gf">
+						<div class="yui-u first">
+							<h2>Projects</h2>
+						</div>
+						<div class="yui-u">
+							<div class="project">
+								<h2><a href="https://github.com/Siren-Identification-Localization/Siren-Identification-Localization?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BWXxTE8vJRPqwMW1aQqqKSg%3D%3D">Identification and Localization of Siren Signals</a></h2>
+								<h4>3/2017 - 5/2017</h4>
+								<ul>
+									<li>Constructed a siren detecting architecture distinct from existing work using a fast singular vector model classification method, specifically non-negative matrix factorization (NMF) and support vector machines (SVM)</li>
+									<li>Trained a dimensionality reduction model using limited training data and performed localization with the returned set of general basis vectors</li>
+									<li>Experimented on simulated data and showed accurate estimation of ambulance location</li>
+								</ul>
+							</div>
+							<div class="project">
+								<h2>Multitask Learning Accura-SEA on Stock Prices</h2>
+								<h4>10/2016 - 12/2016</h4>
+								<ul>
+									<li>Attempted to use historical stock price data to predict future directions through Multitask Learning</li>
+									<li>Studied the relationship between the number of tasks and the accuracy performance of Multitask Factorized Gradient Descent and other regressional algorithms</li>
+									<li>Evaluated the performance of each models through bootstrapping and meta-parameter selection using internal k-fold cross-validation</li>
+								</ul>
+							</div>
+							<div class="project">
+								<h2><a href="http://141.142.168.53/home/cycle/cycle-map.html">Champaign County Bikes CIGI Hack-a-Thon</a></h2>
+								<h4>12/2015 - 1/2016</h4>
+								<ul>
+									<li>Utilized dojo/request package to provide asynchronous requests to OSRM's viaroute API for retrieving the shortest path between given coordinates</li>
+									<li>Drew the route as a polyline with flags for beginning, middle, and end points using ARCGIS API's Graphic class</li>
+								</ul>
+							</div>
+							<div class="project">
+								<h2><a href="http://141.142.168.10/home/urbanflow.php">Urbanflow Web Application</a></h2>
+								<h4>12/2015 - 1/2016</h4>
+								<ul>
+									<li>Collaborated with 2 post-docs to create a prototype for a web application to show the movement of users within cities through analysis on Twitter data</li>
+									<li>Developed with ExtJS to create diverse panels with interactive grids for each user input category that responded by displaying plots drawn with D3.js or zooming into the extent of selected vector files using OpenLayers 2 library</li>
+								</ul>
+							</div>
+							<div class="project">
+								<h2><a href="https://docs.google.com/document/d/1bZCF0sueeXkGUMrOPEzF1BIH6_5uaQdM3rvObSa6m5k/edit?usp=sharing">Jenkins Plugin Extension</a></h2>
+								<h4>9/2015 - 12/2015</h4>
+								<ul>
+									<li>Worked in a team of 7 in a test driven development to extend an existing Jenkins Plugin, Test Results Analyzer, following XP methodology</li>
+									<li>Added more functionality such as comparing build results by selecting the checkboxes above build numbers and easing user navigation by displaying links to the results page</li>
+								</ul>
+							</div>
+							<div class="project">
+								<h2><a href="http://104.236.39.19/research/eyetracking.html">Eye Tracker Analysis</a></h2>
+								<h4>6/2015 - Present</h4>
+								<ul>
+									<li>Analyze .txt data files from Tobii software on 39 test subjects for eye position, duration, and response and create visuals using D3.js and Bokeh</li>
+									<li>Build interactive website for other researchers to explore the data and plots using Javascript/jQuery, HTML, CSS, PHP, and MySQL</li>
+								</ul>
+							</div>
+							<div class="project">
+								<h2><a href="https://github.com/sunwookimiub/CyberGIS-TerrainAnalysis">Parallel Terrain Analysis and Predictive Mapping</a></h2>
+								<h4>5/2015 - 7/2015</h4>
+								<ul>
+									<li>Partitioned and distributed rows of the input image to number of processes desired by the user and calculated slope gradients in parallel through the Message Passing Interface (MPI) on HPC</li>
+									<li>Performed k-means clustering to create a terrain classifier with Apache Spark's MLlib (Machine Learning library) from information gathered through studying archival publications</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+
+					<div class="yui-gf">
+	
+						<div class="yui-u first">
+							<h2>Extra-Curriculars</h2>
+						</div><!--// .yui-u -->
+
+						<div class="yui-u">
+
+							<div class="job">
+								<h2>Association of Data Science and Analytics</h2>
+								<h3>UIUC</h3>
+								<h3>Vice President and Workshops Lead</h3>
+								<h4>8/2014 - 12/2015</h4>
+								<ul>
+									<li>Presented project ideas and discuss in a group for possible extensions and improvements</li>
+									<li>Discussed with company representatives for collaborations for technical workshops</li>
+									<li> Led a group of 8 in the workshops committee to finalize details on the organization website and organize workshops</li>
+								</ul>
+							</div>
+
+						</div><!--// .yui-u -->
+					</div><!--// .yui-gf -->
+
+					<!-- <div class="yui-gf">
+						<div class="yui-u first">
+							<h2>Skills</h2>
+						</div>
+						<div class="yui-u">
+
+								<div class="talent">
+									<h2>Advanced</h2>
+									<p>C/C++, Python, Java, Linux</p>
+								</div>
+
+								<div class="talent">
+									<h2>Intermediate</h2>
+									<p>Javascript, jQuery, D3.js, ExtJS, MySQL, Elasticsearch</p>
+								</div>
+
+								<div class="talent">
+									<h2>Basic</h2>
+									<p>LaTeX, HTML, CSS, PHP, Hadoop, Spark, PostgreSQL, Logstash, Kibana</p>
+								</div>
+						</div>
+					</div><!--// .yui-gf -->
+
+				</div><!--// .yui-b -->
+			</div><!--// yui-main -->
+		</div><!--// bd -->
+
+		<div id="ft">
+			<p>Sun Woo Kim &mdash; <a href="mailto:kimsunw@umail.iu.edu">kimsunw@umail.iu.edu</a> &mdash; (434) - 987-9753</p>
+		</div><!--// footer -->
+
+	</div><!-- // inner -->
+
+</div><!--// doc -->
+
+</body>
+</html>
+
