Updated Research Experience section

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 				<center><img src="sunwoo.jpg" alt="Sun Woo" style="width:304px;height:270px;"></center>
 				<div class="yui-u first">
 					<h1>Sun Woo Kim</h1>
-					<h2><a href="http://104.236.39.19/blog/blog.html">Blog</a></h2>
+          <!-- <h2><a href="http://104.236.39.19/blog/blog.html">Blog</a></h2> -->
 				</div>
 
 				<div class="yui-u">
 					<div class="contact-info">
 						<!--<h3><img src="http://www.icon2s.com/img16/16x16-social-email-icon.png"><a href="mailto:kimsunw@umail.iu.edu">kimsunw@umail.iu.edu</a></h3> -->
-						<h3><a href="mailto:kimsunw@umail.iu.edu">kimsunw@umail.iu.edu</a></h3>
+						<h3><a href="mailto:kimsunw@umail.iu.edu">kimsunw@indiana.edu</a></h3>
 						<h3>(434) - 987-9753</h3>
 						<!-- <h3><img src="https://camo.githubusercontent.com/c9774aeb9b8e2a28455c424db7e98f8a12989dfb/687474703a2f2f6f6935372e74696e797069632e636f6d2f323471367976342e6a7067"><a href="https://github.com/sunwookimuiuc">Go to Github</a></h3> -->
-						<h3><a href="https://github.com/sunwookimuiuc">Go to Github</a></h3>
+						<h3><a href="https://github.com/sunwookimiub">Go to Github</a></h3>
 						<!-- <h3><img src="http://megaicons.net/static/img/icons_sizes/182/456/16/linkedin-icon.png"><a href="https://www.linkedin.com/in/kim392">Go to LinkedIn</a></h3> -->
 						<h3><a href="https://www.linkedin.com/in/kim392">Go to LinkedIn</a></h3>
 					</div><!--// .contact-info -->
@@ -49,22 +49,32 @@
 						</div>
 						<div class="yui-u">
 							<h2>Indiana University Bloomington</h2>
-							<h3>PhD, Computer Science &mdash; 3.76 GPA </h3>
+							<h3>PhD, Computer Science &mdash; 3.8 GPA </h3>
 							<p><br></p>
 						</div>
 						<div class="yui-u">
 							<h2>University of Illinois at Urbana-Champaign</h2>
-							<h3>BS, Physics &mdash; 3.34 GPA </h3>
+							<h3>BS, Physics &mdash; 3.3 GPA </h3>
 						</div>
 					</div><!--// .yui-gf -->
 					
 					<div class="yui-gf">
 	
 						<div class="yui-u first">
-							<h2>Experience</h2>
+							<h2>Research Experience</h2>
 						</div><!--// .yui-u -->
 
 						<div class="yui-u">
+
+							<div class="job">
+								<h2>School of Informatics, Computing, and Engineering</h2>
+								<h3>Bloomington, IN</h3>
+								<h3>Independent Study</h3>
+								<h4>8/2017 - Present</h4>
+								<ul>
+                  <li> Perform source separation on quantized input and Gated Recurrent Unit (GRU) cells by learning on floating points then transferring over to a binarized version of the model</li>
+								</ul>
+							</div>
 
 							<div class="job">
 								<h2>National Center for Supercomputing Applications</h2>
@@ -73,10 +83,7 @@
 								<h4>5/2015 - Present</h4>
 								<ul>
 									<li>Designed and developed a parallel program employed in CyberGIS Summer School on Big Data Landscapes</li>
-									<li>Tested performance of ROGER supercomputer through the portable batch system (PBS) with Intel benchmarks</li>
-									<li>Actively communicated and followed up with members of other NCSA departments to promote updating the cluster for further expansion of frameworks available to all ROGER users </li>
-									<li>Experimented on the Hadoop cluster with TeraSort and Starfish to adjust parameters for optimal performance</li>
-									<li>Prepared and demonstrated development results to an audience of more than 20 professionals of various areas</li>
+                  <li> Created a prototype for an interactive web application with ExtJS that displayed Twitter activity within major cities in the United States along with plots drawn with D3.js </li>
 								</ul>
 							</div>
 
