--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 							<h2>Education</h2>
 						</div>
 						<div class="yui-u">
-							<h2>Indiana University Bloomington</h2>
-							<h3>PhD, Computer Science &mdash; 3.8 GPA </h3>
+							<h3>Indiana University Bloomington</h3>
+							<h4>PhD, Computer Science &mdash; 3.8 GPA </h4>
 							<p><br></p>
 						</div>
 						<div class="yui-u">
-							<h2>University of Illinois at Urbana-Champaign</h2>
-							<h3>BS, Physics &mdash; 3.3 GPA </h3>
+							<h3>University of Illinois at Urbana-Champaign</h3>
+							<h4>BS, Physics &mdash; 3.3 GPA </h4>
 						</div>
 					</div><!--// .yui-gf -->
 					
@@ -67,20 +67,20 @@
 						<div class="yui-u">
 
 							<div class="job">
-								<h2>School of Informatics, Computing, and Engineering</h2>
-								<h3>Bloomington, IN</h3>
-								<h3>Independent Study</h3>
-								<h4>8/2017 - Present</h4>
+								<h3>School of Informatics, Computing, and Engineering</h3>
+								<h4>Bloomington, IN</h4>
+								<h4>Independent Study</h4>
+								<h5>8/2017 - Present</h5>
 								<ul>
                   <li> Perform source separation on quantized input and Gated Recurrent Unit (GRU) cells by learning on floating points then transferring over to a binarized version of the model</li>
 								</ul>
 							</div>
 
 							<div class="job">
-								<h2>National Center for Supercomputing Applications</h2>
-								<h3>Urbana, IL</h3>
-								<h3>CyberGIS SPIN Intern</h3>
-								<h4>5/2015 - Present</h4>
+								<h3>National Center for Supercomputing Applications</h3>
+								<h4>Urbana, IL</h4>
+								<h4>CyberGIS SPIN Intern</h4>
+								<h5>5/2015 - 5/2016</h5>
 								<ul>
 									<li>Designed and developed a parallel program employed in CyberGIS Summer School on Big Data Landscapes</li>
                   <li> Created a prototype for an interactive web application with ExtJS that displayed Twitter activity within major cities in the United States along with plots drawn with D3.js </li>
@@ -97,17 +97,31 @@
 							<h2>Projects</h2>
 						</div>
 						<div class="yui-u">
+
 							<div class="project">
-								<h2><a href="https://github.com/Siren-Identification-Localization/Siren-Identification-Localization?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BWXxTE8vJRPqwMW1aQqqKSg%3D%3D">Identification and Localization of Siren Signals</a></h2>
+								<h3>Binary GRU</h3>
+								<h4>1/2018 - Present</h4>
+								<ul>
+                    <li> Mix clean signals with noises to generate input spectrums and quantize with Lloyd Max Quantization</li>
+                    <li> Create a custom GRU Cell in Tensorflow using binarized weights and activations with custom gradients</li>
+                    <li> Build a $n$-layered RNN model to save and restore trainable variables</li>
+                    <li> Quantize weights by binarizing, introducing sparsity, and scaling using external trainable variables</li>
+                    <li> Visualize changes in weights and respective gradients using Tensorboard</li>
+								</ul>
+							</div>
+
+							<div class="project">
+								<h3><a href="https://github.com/Siren-Identification-Localization/Siren-Identification-Localization?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BWXxTE8vJRPqwMW1aQqqKSg%3D%3D">Identification and Localization of Siren Signals</a></h3>
 								<h4>3/2017 - 5/2017</h4>
 								<ul>
-									<li>Constructed a siren detecting architecture distinct from existing work using a fast singular vector model classification method, specifically non-negative matrix factorization (NMF) and support vector machines (SVM)</li>
+									<li>Constructed a siren detecting architecture distinct from existing work using a fast singular vector model classification method with sklearn, specifically non-negative matrix factorization (NMF) and support vector machines (SVM)</li>
 									<li>Trained a dimensionality reduction model using limited training data and performed localization with the returned set of general basis vectors</li>
 									<li>Experimented on simulated data and showed accurate estimation of ambulance location</li>
 								</ul>
 							</div>
+
 							<div class="project">
-								<h2>Multitask Learning Accura-SEA on Stock Prices</h2>
+								<h3>Multitask Learning Accura-SEA on Stock Prices</h3>
 								<h4>10/2016 - 12/2016</h4>
 								<ul>
 									<li>Attempted to use historical stock price data to predict future directions through Multitask Learning</li>
@@ -115,24 +129,27 @@
 									<li>Evaluated the performance of each models through bootstrapping and meta-parameter selection using internal k-fold cross-validation</li>
 								</ul>
 							</div>
+
 							<div class="project">
-								<h2><a href="http://141.142.168.53/home/cycle/cycle-map.html">Champaign County Bikes CIGI Hack-a-Thon</a></h2>
+								<h3><a href="http://141.142.168.53/home/cycle/cycle-map.html">Champaign County Bikes CIGI Hack-a-Thon</a></h3>
 								<h4>12/2015 - 1/2016</h4>
 								<ul>
 									<li>Utilized dojo/request package to provide asynchronous requests to OSRM's viaroute API for retrieving the shortest path between given coordinates</li>
 									<li>Drew the route as a polyline with flags for beginning, middle, and end points using ARCGIS API's Graphic class</li>
 								</ul>
 							</div>
+
 							<div class="project">
-								<h2><a href="http://141.142.168.10/home/urbanflow.php">Urbanflow Web Application</a></h2>
+								<h3><a href="http://141.142.168.10/home/urbanflow.php">Urbanflow Web Application</a></h3>
 								<h4>12/2015 - 1/2016</h4>
 								<ul>
 									<li>Collaborated with 2 post-docs to create a prototype for a web application to show the movement of users within cities through analysis on Twitter data</li>
 									<li>Developed with ExtJS to create diverse panels with interactive grids for each user input category that responded by displaying plots drawn with D3.js or zooming into the extent of selected vector files using OpenLayers 2 library</li>
 								</ul>
 							</div>
+
 							<div class="project">
-								<h2><a href="https://docs.google.com/document/d/1bZCF0sueeXkGUMrOPEzF1BIH6_5uaQdM3rvObSa6m5k/edit?usp=sharing">Jenkins Plugin Extension</a></h2>
+								<h3><a href="https://docs.google.com/document/d/1bZCF0sueeXkGUMrOPEzF1BIH6_5uaQdM3rvObSa6m5k/edit?usp=sharing">Jenkins Plugin Extension</a></h3>
 								<h4>9/2015 - 12/2015</h4>
 								<ul>
 									<li>Worked in a team of 7 in a test driven development to extend an existing Jenkins Plugin, Test Results Analyzer, following XP methodology</li>
@@ -140,19 +157,19 @@
 								</ul>
 							</div>
 							<div class="project">
-								<h2><a href="http://104.236.39.19/research/eyetracking.html">Eye Tracker Analysis</a></h2>
-								<h4>6/2015 - Present</h4>
+								<h3><a href="http://104.236.39.19/research/eyetracking.html">Eye Tracker Analysis</a></h3>
+								<h4>6/2015 - 12/2015</h4>
 								<ul>
 									<li>Analyze .txt data files from Tobii software on 39 test subjects for eye position, duration, and response and create visuals using D3.js and Bokeh</li>
 									<li>Build interactive website for other researchers to explore the data and plots using Javascript/jQuery, HTML, CSS, PHP, and MySQL</li>
 								</ul>
 							</div>
 							<div class="project">
-								<h2><a href="https://github.com/sunwookimiub/CyberGIS-TerrainAnalysis">Parallel Terrain Analysis and Predictive Mapping</a></h2>
+								<h3><a href="https://github.com/sunwookimiub/CyberGIS-TerrainAnalysis">Parallel Terrain Analysis and Predictive Mapping</a></h3>
 								<h4>5/2015 - 7/2015</h4>
 								<ul>
 									<li>Partitioned and distributed rows of the input image to number of processes desired by the user and calculated slope gradients in parallel through the Message Passing Interface (MPI) on HPC</li>
-									<li>Performed k-means clustering to create a terrain classifier with Apache Spark's MLlib (Machine Learning library) from information gathered through studying archival publications</li>
+									<li>Performed k-means clustering to create a terrain classifier with Apache Spark's MLlib</li>
 								</ul>
 							</div>
 						</div>
@@ -161,44 +178,43 @@
 					<div class="yui-gf">
 	
 						<div class="yui-u first">
-							<h2>Extra-Curriculars</h2>
+							<h2>Teaching Experience</h2>
 						</div><!--// .yui-u -->
 
 						<div class="yui-u">
 
 							<div class="job">
-								<h2>Association of Data Science and Analytics</h2>
-								<h3>UIUC</h3>
-								<h3>Vice President and Workshops Lead</h3>
-								<h4>8/2014 - 12/2015</h4>
+								<h3>Indiana University Bloomington</h3>
+								<h4>Bloomington, IN</h4>
+								<h4>Associate Instructor for E533: Deep Learning Systems</h4>
+								<h5>1/2018 - 5/2018</h5>
 								<ul>
-									<li>Presented project ideas and discuss in a group for possible extensions and improvements</li>
-									<li>Discussed with company representatives for collaborations for technical workshops</li>
-									<li> Led a group of 8 in the workshops committee to finalize details on the organization website and organize workshops</li>
+                  <li>Answer questions on deep learning concepts, implementations with Tensorflow, and setting up with GPU on servers during office hours</li>
+                  <li>Assist guest lecturers in preparing, taking attendance, and recording the lectures</li>
 								</ul>
 							</div>
 
 						</div><!--// .yui-u -->
 					</div><!--// .yui-gf -->
 
-					<!-- <div class="yui-gf">
+					<div class="yui-gf">
 						<div class="yui-u first">
-							<h2>Skills</h2>
+							<h2>Technical Skills</h2>
 						</div>
 						<div class="yui-u">
 
 								<div class="talent">
-									<h2>Advanced</h2>
+									<h3>Advanced</h3>
 									<p>C/C++, Python, Java, Linux</p>
 								</div>
 
 								<div class="talent">
-									<h2>Intermediate</h2>
+									<h3>Intermediate</h3>
 									<p>Javascript, jQuery, D3.js, ExtJS, MySQL, Elasticsearch</p>
 								</div>
 
 								<div class="talent">
-									<h2>Basic</h2>
+									<h3>Basic</h3>
 									<p>LaTeX, HTML, CSS, PHP, Hadoop, Spark, PostgreSQL, Logstash, Kibana</p>
 								</div>
 						</div>
