CSS start touching up

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 				<div class="yui-u">
 					<div class="contact-info">
 						<!--<h3><img src="http://www.icon2s.com/img16/16x16-social-email-icon.png"><a href="mailto:kimsunw@umail.iu.edu">kimsunw@umail.iu.edu</a></h3> -->
-						<h3><a href="mailto:kimsunw@umail.iu.edu">kimsunw@indiana.edu</a></h3>
-						<h3>(434) - 987-9753</h3>
+						<h4><a href="mailto:kimsunw@umail.iu.edu">kimsunw@indiana.edu</a></h4>
+						<h4>(434) - 987-9753</h4>
 						<!-- <h3><img src="https://camo.githubusercontent.com/c9774aeb9b8e2a28455c424db7e98f8a12989dfb/687474703a2f2f6f6935372e74696e797069632e636f6d2f323471367976342e6a7067"><a href="https://github.com/sunwookimuiuc">Go to Github</a></h3> -->
-						<h3><a href="https://github.com/sunwookimiub">Go to Github</a></h3>
+						<h4><a href="https://github.com/sunwookimiub">Go to Github</a></h4>
 						<!-- <h3><img src="http://megaicons.net/static/img/icons_sizes/182/456/16/linkedin-icon.png"><a href="https://www.linkedin.com/in/kim392">Go to LinkedIn</a></h3> -->
-						<h3><a href="https://www.linkedin.com/in/kim392">Go to LinkedIn</a></h3>
+						<h4><a href="https://www.linkedin.com/in/kim392">Go to LinkedIn</a></h4>
 					</div><!--// .contact-info -->
 				</div>
 			</div><!--// .yui-gc -->
@@ -205,17 +205,17 @@
 
 								<div class="talent">
 									<h3>Advanced</h3>
-									<p>C/C++, Python, Java, Linux</p>
+									<p>Python, Tensorflow</p>
 								</div>
 
 								<div class="talent">
 									<h3>Intermediate</h3>
-									<p>Javascript, jQuery, D3.js, ExtJS, MySQL, Elasticsearch</p>
+                  <p>C/C++, Java</p>
 								</div>
 
 								<div class="talent">
 									<h3>Basic</h3>
-									<p>LaTeX, HTML, CSS, PHP, Hadoop, Spark, PostgreSQL, Logstash, Kibana</p>
+									<p>LaTeX, HTML, Javascript, MySQL</p>
 								</div>
 						</div>
 					</div><!--// .yui-gf -->
