--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <link rel="stylesheet" href="css/acl.css" type="text/css" />
-  <title>Alexander C. Lembcke</title>
+  <title>Sunwoo Kim</title>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />  
   <base target="_parent">
 </head>
@@ -12,27 +12,23 @@
  <tbody>
   <tr valign="top">
    <td colspan="2">
-    <div class="smallhdr">Studies</div>
-	<div class="txt">
-		<b>PhD in Economics</b> <br>
-		June 2012 (Expected) <a href="http://econ.lse.ac.uk/">London School of Economics</a><br>
-	</div>
-	<div class="txt">
-		<b>MRes in Economics</b> <br>
-		September 2008 <a href="http://econ.lse.ac.uk/">London School of Economics</a><br>
-	</div>
-	<div class="txt">
-		<b>Diplom in Economics</b> <br>
-		March 2006 <a href="http://www.wiwi.uni-frankfurt.de/">J. W. Goethe University (Frankfurt)</a><br>
-	</div>
     <div class="smallhdr">Research</div>
     <div class="txt">
-		<b>Main Fields</b> <br>
+		<b>Machine Learning Algorithms for Audio Signal Processing</b> <br>
 		Labor Economics, Applied Econometrics
 	</div>
 	<div class="txt">
 		<b>Secondary Fields</b> <br>
 		Personnel Economics, Health Economics 
+	</div>
+    <div class="smallhdr">Education</div>
+	<div class="txt">
+		<b>PhD Intelligent Systems Engineering</b> <br>
+		May 2021 (Expected) <a href="https://www.sice.indiana.edu/">Indiana University Bloomington</a><br>
+	</div>
+	<div class="txt">
+		<b>BS Physics</b> <br>
+		May 2016 <a href="https://illinois.edu/">University of Illinois at Urbana-Champaign</a><br>
 	</div>
 	<div class="smallhdr">Job Market Paper</div>
     <div class="txt">
