--- a/home.html
+++ b/home.html
@@ -14,12 +14,8 @@
    <td colspan="2">
     <div class="smallhdr">Research</div>
     <div class="txt">
-		<b>Machine Learning Algorithms for Audio Signal Processing</b> <br>
-		Labor Economics, Applied Econometrics
-	</div>
-	<div class="txt">
-		<b>Secondary Fields</b> <br>
-		Personnel Economics, Health Economics 
+		<b>Signals and AI Group in Engineering (SAIGE)</b> <br>
+		Prof. Minje Kim
 	</div>
     <div class="smallhdr">Education</div>
 	<div class="txt">
@@ -30,59 +26,15 @@
 		<b>BS Physics</b> <br>
 		May 2016 <a href="https://illinois.edu/">University of Illinois at Urbana-Champaign</a><br>
 	</div>
-	<div class="smallhdr">Job Market Paper</div>
-    <div class="txt">
-	 <b>Title</b><br>
-	</div>
-	<div class="txt">
-	 <a href="CV.pdf">Download</a>
-	</div>
-    <table width="100%" cellpadding="0" cellspacing="0">
-		<tr colspan="2" border="0">
-		<div class="smallhdr">References</div>
-		</tr>
-		<tr border="0">
-			<td>
-				<div class="txt">
-				<a href="mailto:S.Pischke@lse.ac.uk">Prof. Steve Pischke</a>
-				</div>
-			</td>
-			<td>
-				<div class="txt">
-				(Advisor, LSE)
-				</div>
-			</td>
-		</tr>
-		<tr border="0">
-			<td>
-				<div class="txt">
-				<a href="mailto:A.Manning@lse.ac.uk">Prof. Alan Manning</a>
-				</div>
-			</td>
-			<td>
-				<div class="txt">
-				(Advisor, LSE)
-				</div>
-			</td>
-		</tr>
-    </table>
    <td colspan="1" align="center" width="100px">
 	<img src="images/acl235.jpg">	
 	<table width="100%">
 	 <tr>
 	  <td align="left">
-		<b> Phone: </b>
-	  </td>
-	  <td align="right">
-		+44 (20) 7955 6685<br>
-	  </td>
-	 </tr>
-	 <tr>
-	  <td align="left">
 	   <b> E-mail: </b>
 	  </td>
       <td align="right">
-	   <a href="mailto:a.c.lembcke@lse.ac.uk">a.c.lembcke@lse.ac.uk</a>
+	   kimsunw-(at)-indiana.edu
 	  </td>
 	 </tr>
 	</table>		
