--- a/home.html
+++ b/home.html
@@ -12,6 +12,8 @@
  <tbody>
   <tr valign="top">
    <td colspan="2">
+    <div class="smallhdr">About</div>
+	I am a third year grad student in Intelligent Systems Engineering at Indiana University Bloomington. I am working as part of the SAIGE lab under professor Minje Kim. I am interested in machine learning algorithms and network compression in the application area of audio signal processing. 
     <div class="smallhdr">Research</div>
     <div class="txt">
 		<b>Signals and AI Group in Engineering (SAIGE)</b> <br>
@@ -30,9 +32,6 @@
 	<img src="images/acl235.jpg">	
 	<table width="100%">
 	 <tr>
-	  <td align="left">
-	   <b> E-mail: </b>
-	  </td>
       <td align="right">
 	   kimsunw-(at)-indiana.edu
 	  </td>
