--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
   <tr valign="top">
    <td colspan="2">
     <div class="smallhdr">About</div>
-	I am a third year grad student in Intelligent Systems Engineering at Indiana University Bloomington. I am working as part of the SAIGE lab under professor Minje Kim. I am interested in machine learning algorithms and network compression in the application area of audio signal processing. 
+	I am a third year grad student in Intelligent Systems Engineering at Indiana University Bloomington. I am working as part of the SAIGE lab under professor Minje Kim. I am interested in machine learning algorithms and network compression in the application area of audio signal processing.  
     <div class="smallhdr">Research</div>
     <div class="txt">
 		<b>Signals and AI Group in Engineering (SAIGE)</b> <br>
@@ -29,7 +29,7 @@
 		May 2016 <a href="https://illinois.edu/">University of Illinois at Urbana-Champaign</a><br>
 	</div>
    <td colspan="1" align="center" width="100px">
-	<img src="images/acl235.jpg">	
+	<img src="images/me.jpg">	
 	<table width="100%">
 	 <tr>
       <td align="right">
