--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-	<title>Alexander C. Lembcke</title>
+	<title>Sunwoo Kim</title>
 </head>
 
 
