--- a/header.html
+++ b/header.html
@@ -17,7 +17,7 @@
    <td>
 	<div id="headerlinks">
 	 <a target="body" href="home.html">Home</a><img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px">
-	 <a target="blank" href="CV.pdf">CV</a><img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px">
+	 <a target="blank" href="Sunwoo_Kim_Resume.pdf">Resume</a><img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px">
 	 <a target="body" href="research.html">Research</a><img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px">
 	 <a target="body" href="teaching.html">Teaching</a><img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px">
 	</div>
