--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
   <link rel="stylesheet" href="css/acl.css" type="text/css" />
-  <title>Alexander C. Lembcke</title>
+  <title>Sunwoo Kim</title>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 </head>
 
@@ -9,8 +9,7 @@
  <table align="center" border="0" cellpadding="0" cellspacing="0" width="730">
   <tr>
    <td align="center">
-	<div id="logo">Alexander C. Lembcke</div>
-	<div id="phd"> Job Market Candidate (not yet)</div>
+	<div id="logo">Sunwoo Kim</div>
    </td>
   </tr>
   <tr align="center">
