--- a/home.html
+++ b/home.html
@@ -28,8 +28,8 @@
 		<b>BS Physics</b> <br>
 		May 2016 <a href="https://illinois.edu/">University of Illinois at Urbana-Champaign</a><br>
 	</div>
-   <td colspan="1" align="center" width="70px">
-	<img src="images/me.jpg">	
+   <td colspan="1" align="center" width="100px">
+	<img src="images/me.jpg", width="50">	
 	<table width="100%">
 	 <tr>
       <td align="right">
