--- a/research.html
+++ b/research.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <link rel="stylesheet" href="css/acl.css" type="text/css" />
-  <title>Alexander C. Lembcke</title>
+  <title>Sunwoo Kim</title>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />  
   <base target="_parent">
 </head>
@@ -12,80 +12,26 @@
  <tbody>
   <tr valign="top">
   <td>
-    <div class="smallhdr">Job Market Paper</div>
+    <div class="smallhdr">Signals and AI Group in Engineering (SAIGE)</div>
 	<div class="researchhdr">
-		Title
-	</div>
-	<div class="researchsubhdr">
-		(Job Market Paper, August 2011)
+		Prof. Minje Kim
 	</div>
 	<div class="txt">
-	 Abstract 150 words
-	</div>
-	<div class="txt">
-	 <a href="">Download</a>
+Researching machine learning algorithms for source separation and network compression for efficient inference
+systems. Delved into recurrent neural networks (RNN) with gated recurrent units for speech denoising and
+audio enhancement, and quantized into bitwise system for efficiency. Currently exploring attention models on
+RNNs and winner-take-all hashing implementation of non-negative matrix factorization for source separation.
 	</div>
 	
-    <div class="smallhdr">Discussion Paper</div>
+    <div class="smallhdr">National Center for Supercomputing Applications</div>
 	
 	<div class="researchhdr">
-	 Unionization, Stochastic Dominance, and Compression of the Wage Distribution: Evidence from Germany
-	</div>
-	<div class="researchsubhdr">
-	 (joint with Michael C. Burda, Bernd Fitzenberger and Thorsten Vogel)
+		Prof. Shaowen Wang
 	</div>
 	<div class="txt">
-	 <a href="http://sfb649.wiwi.hu-berlin.de/papers/pdf/SFB649DP2008-041.pdf">Download</a>
+Worked with researchers to create various CyberGIS applications. Performed parallel terrain analysis and
+predictive ecosystem mapping. Created an interactive web application to display Twitter activity.
 	</div>
-	<div class="researchhdr">
-	 Union Wage Effects in Germany: Union Density or Collective Bargaining Coverage?
-	</div>
-	<div class="researchsubhdr">
-	 (joint with Bernd Fitzenberger and Karsten Kohn, revise and resubmit ILRR)
-	</div>
-	<div class="txt">
-	 <a href="http://cep.lse.ac.uk/_new/publications/abstract.asp?index=3647">Download</a>
-	</div>
-
-	 
-	<div class="smallhdr">Work in Progress</div>
-	<div class="researchhdr">
-	 Productivity and Shirking. Incentivizing Young Workers.
-	</div>
-	<div class="researchsubhdr">
-	 (mimeo)
-	</div>
-	<div class="researchhdr">
-	 The Impact of Paid Holiday Entitlement on Employment. The UK Working Time Regulation 1998
-	</div>
-	<div class="researchsubhdr">
-	 (mimeo August 2011, available on request)
-	</div>
-	<div class="researchhdr">
-	 Title
-	</div>
-	<div class="researchsubhdr">
-	 (joint with Karsten Kohn)
-	</div>
-
-	<div class="smallhdr">Published</div>
-	<div class="researchhdr">
-	 Wage Distributions by Bargaining Regime - Linked Employer-Employee Data Evidence from Germany
-	</div>
-	<div class="researchsubhdr">
-	 (joint with Karsten Kohn, AStA Wirtschafts- und Sozialstatistisches Archiv, 2007; 1(3-4), 247-261)
-	</div>
-	<div class="txt">
-	 <a href="http://ideas.repec.org/a/spr/astaws/v1y2007i3p247-261.html">Download</a>
-	</div>
-	<div class="researchhdr">
-	 The Vision of War without Casualties - On the Use of Casualty Aversion in Armament Advertisements
-	</div>
-	<div class="researchsubhdr">
-	 (joint with Niklas Schoernig, Journal of Conflict Resolution, 2006; 50(2), 204-227)
-	</div>
-
-	
    </td>
   </tr>
  </tbody>	 
