--- a/research.html
+++ b/research.html
@@ -32,6 +32,17 @@ RNNs and winner-take-all hashing implementation of non-negative matrix factoriza
 Worked with researchers to create various CyberGIS applications. Performed parallel terrain analysis and
 predictive ecosystem mapping. Created an interactive web application to display Twitter activity.
 	</div>
+
+    <div class="smallhdr">Project: Incremental Binarization On Recurrent Neural Networks For Single-Channel Source Separation</div>
+	<div class="txt">
+The Bitwise Gated Recurrent Unit (BGRU) network aims to perform the source separation task with
+minimal computational cost. RNNs are hard to train and heavy in space and time complexity. The BGRU
+model quantizes the feedforward procedure with binarized values and bitwise operations. The network is
+initialized with pretrained real-valued weights and incrementally binarized to preserve the quality of the
+source separation system. Experiments show that the BGRU model can outperform a real-valued fully
+connected network with fewer number of weights.
+	</div>
+
    </td>
   </tr>
  </tbody>	 
