--- a/teaching.html
+++ b/teaching.html
@@ -14,22 +14,13 @@
    <td colspan="2">
     <div class="smallhdr">Office hour</div>
 	<div class="txt">
-		Term time: TBA<br>
-		Break: By appointment only
+		Term time: Check Canvas
 	</div>
     <div class="smallhdr">Current teaching</div>
 	<div class="txt">
-		<b>EC486 Econometric Methods</b> <br>
-		<a href="http://www2.lse.ac.uk/management/programmes/msc/management-and-economics/home.aspx">Master in Management and Economics</a><br>
-		<a href="http://econ.lse.ac.uk/courses/ec486/">Course Guide</a><br>
-		All teaching material will be posted on <a href="http://moodle.lse.ac.uk/course/view.php?id=1205">moodle</a>.
+		<b>ENGR 511 Machine Learning for Signal Processing</b> <br>
 	</div>
-    <div class="smallhdr">Stata resources</div>
-    <div class="txt">
-		<a href="http://personal.lse.ac.uk/lembcke/ecStata/2010/MResStataNotesOct2010PartA.pdf">Lecture notes - Introduction (Oct. 2010)</a><br>
-		<a href="http://personal.lse.ac.uk/lembcke/ecStata/2009/MResStataNotesFeb2009PartB.pdf">Lecture notes - Advanced topics (Feb. 2009)</a>
-	</div>
-	<div class="smallhdr">Past teaching</div>
+    <div class="smallhdr">Past teaching</div>
 	<div class="txt">
 	 <b>Postgraduate</b><br>
 	  EC486 Econometric Methods<br>
@@ -40,34 +31,8 @@
 	  Stata for MRes/PhD students and Stata for MSC students<br>
 	  Introduction to Stata and Advanced Stata for RLAB members<br>
 	</div>
-	<div class="txt">
-	 <b>Undergraduate</b><br>
-	  First Summer Economics Research Workshop<br>
-	  EC317 Labour Economics<br>
-	  ECON7002 Economics of Finance<br>
-	  EC220 Introduction to Econometrics<br>
-	  Statistics 1
-	</div>	 
    <td colspan="1" align="center" width="100px">
 	<a href="http://xkcd.com"><img src="images/xkcd.png"></a>
-	<table width="100%">
-	 <tr>
-	  <td align="left">
-		<b> Phone: </b>
-	  </td>
-	  <td align="right">
-		+44 (20) 7955 6685<br>
-	  </td>
-	 </tr>
-	 <tr>
-	  <td align="left">
-	   <b> E-mail: </b>
-	  </td>
-      <td align="right">
-	   <a href="mailto:a.c.lembcke@lse.ac.uk">a.c.lembcke@lse.ac.uk</a>
-	  </td>
-	 </tr>
-	</table>		
    </td>
   </tr>
  </tbody>
