--- a/research.html
+++ b/research.html
@@ -12,37 +12,14 @@
  <tbody>
   <tr valign="top">
   <td>
-    <div class="smallhdr">Signals and AI Group in Engineering (SAIGE)</div>
-	<div class="researchhdr">
-		Prof. Minje Kim
-	</div>
-	<div class="txt">
-Researching machine learning algorithms for source separation and network compression for efficient inference
-systems. Delved into recurrent neural networks (RNN) with gated recurrent units for speech denoising and
-audio enhancement, and quantized into bitwise system for efficiency. Currently exploring attention models on
-RNNs and winner-take-all hashing implementation of non-negative matrix factorization for source separation.
-	</div>
 	
-    <div class="smallhdr">National Center for Supercomputing Applications</div>
-	
+    <div class="smallhdr"><a target="blank" href="BGRU_Paper.pdf">Incremental Binarization On Recurrent Neural Networks For Single-Channel Source Separation</a><img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px"></div>
 	<div class="researchhdr">
-		Prof. Shaowen Wang
+	 	S. Kim, M. Maity, M. Kim (2018, October)
 	</div>
 	<div class="txt">
-Worked with researchers to create various CyberGIS applications. Performed parallel terrain analysis and
-predictive ecosystem mapping. Created an interactive web application to display Twitter activity.
+		Bitwise Gated Recurrent Units for Source Separation Task. Submitted for Publication.
 	</div>
-
-    <div class="smallhdr">Project: Incremental Binarization On Recurrent Neural Networks For Single-Channel Source Separation</div>
-	<div class="txt">
-The Bitwise Gated Recurrent Unit (BGRU) network aims to perform the source separation task with
-minimal computational cost. RNNs are hard to train and heavy in space and time complexity. The BGRU
-model quantizes the feedforward procedure with binarized values and bitwise operations. The network is
-initialized with pretrained real-valued weights and incrementally binarized to preserve the quality of the
-source separation system. Experiments show that the BGRU model can outperform a real-valued fully
-connected network with fewer number of weights.
-	</div>
-
    </td>
   </tr>
  </tbody>	 
