--- a/teaching.html
+++ b/teaching.html
@@ -22,14 +22,8 @@
 	</div>
     <div class="smallhdr">Past teaching</div>
 	<div class="txt">
-	 <b>Postgraduate</b><br>
-	  EC486 Econometric Methods<br>
-	  EC423 Labour Economics<br>
-	  EC455 Quantitative Approaches and Policy Analysis<br>
-	  EC400 Introductory Courses in Maths and Statistics<br>
-	  EC440 Microeconomics and Macroeconomics for Public Policy Q&A <br>
-	  Stata for MRes/PhD students and Stata for MSC students<br>
-	  Introduction to Stata and Advanced Stata for RLAB members<br>
+	  CSCI-P565 Software Engineering I<br>
+	  ENGR-E599 Deep Learning Systems<br>
 	</div>
    <td colspan="1" align="center" width="100px">
 	<a href="http://xkcd.com"><img src="images/xkcd.png"></a>
