--- a/research.html
+++ b/research.html
@@ -13,7 +13,8 @@
   <tr valign="top">
   <td>
 	
-    <div class="smallhdr"><a target="blank" href="BGRU_Paper.pdf">Incremental Binarization On Recurrent Neural Networks For Single-Channel Source Separation</a><img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px"></div>
+    <a target="blank" href="BGRU_Paper.pdf">Incremental Binarization On Recurrent Neural Networks For Single-Channel Source Separation</a><img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px">
+    <!--<div class="smallhdr"><a target="blank" href="BGRU_Paper.pdf">Incremental Binarization On Recurrent Neural Networks For Single-Channel Source Separation</a><img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px"></div>-->
 	<div class="researchhdr">
 	 	S. Kim, M. Maity, M. Kim (2018, October)
 	</div>
