--- a/teaching.html
+++ b/teaching.html
@@ -26,7 +26,7 @@
 	  ENGR-E599 Deep Learning Systems<br>
 	</div>
    <td colspan="1" align="center" width="100px">
-	<a href="http://xkcd.com"><img src="images/xkcd.png"></a>
+	<a href="http://xkcd.com"><img src="https://imgs.xkcd.com/comics/tasks.png"></a>
    </td>
   </tr>
  </tbody>
