--- a/research.html
+++ b/research.html
@@ -15,10 +15,20 @@
 	
     <div class="smallhdr"><a target="blank" href="BGRU_Paper.pdf">Incremental Binarization On Recurrent Neural Networks For Single-Channel Source Separation</a><img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px"></div>
 	<div class="researchhdr">
-	 	S. Kim, M. Maity, M. Kim (2018, October)
+	 	S. Kim, M. Maity, M. Kim (ICASSP 2019)
 	</div>
 	<div class="txt">
 		Bitwise Gated Recurrent Units for Source Separation Task. Submitted for Publication.
+	</div>
+   </td>
+  <td>
+	
+    <div class="smallhdr"><a target="blank" href="WTANNSS_Paper.pdf">Locality Sensitive Hashing for Bitwise Source Separation</a><img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px"></div>
+	<div class="researchhdr">
+	 	S. Kim, M. Kim (2019, April)
+	</div>
+	<div class="txt">
+		Iteration free bitwise source separation algorithm based on Winner-Take-All hash codes. Submitted for Publication.
 	</div>
    </td>
   </tr>
