--- a/research.html
+++ b/research.html
@@ -25,7 +25,7 @@
   <tr>
   <td>
 	
-    <div class="smallhdr"><a target="blank" href="WTANNSS_Paper.pdf">Locality Sensitive Hashing for Bitwise Source Separation</a><img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px"></div>
+    <div class="smallhdr"><a target="blank" href="WTANNSS_Paper.pdf">Nearest Neighbor Search-Based Bitwise Source Separation Using Discriminant Winner-Take-All Hashing</a><img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px"></div>
 	<div class="researchhdr">
 	 	S. Kim, M. Kim (2019, April)
 	</div>
@@ -34,6 +34,18 @@
 	</div>
    </td>
   </tr>
+
+    <div class="smallhdr"><a target="blank" href="WTANNSS_Paper.pdf">Nearest Neighbor Search-Based Bitwise Source Separation Using Discriminant Winner-Take-All Hashing</a><img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px"></div>
+	<div class="researchhdr">
+	 	S. Kim, M. Kim (2019, April)
+	</div>
+	<div class="txt">
+		Iteration free bitwise source separation algorithm based on Winner-Take-All hash codes. Submitted for Publication.
+	</div>
+   </td>
+  </tr>
+
+
  </tbody>	 
 </table>
 
