Updating research page

--- a/research.html
+++ b/research.html
@@ -25,6 +25,18 @@
 
   <tr>
   <td>
+    <div class="smallhdr"><a target="blank" href="BLSH_Paper.pdf">Boosted Locality Sensitive Hashing: Discriminative Binary Codes for Source Separation</a><img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px"></div>
+	<div class="researchhdr">
+	 	S. Kim, H. Yang, M. Kim (In Submission)
+	</div>
+	<div class="txt">
+        Designed adaptive boosting approach using logistic regressors as weak learners to learn locality sensitive hash codes that represent audio spectra efficiently, and used kNN procedure on hashed space for source separation.
+	</div>
+   </td>
+  </tr>
+
+  <tr>
+  <td>
     <div class="smallhdr"><a target="blank" href="WTANNSS_Paper.pdf">Nearest Neighbor Search-Based Bitwise Source Separation Using Discriminant Winner-Take-All Hashing</a><img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px"></div>
 	<div class="researchhdr">
 	 	S. Kim, M. Kim (2019, April)
