--- a/research.html
+++ b/research.html
@@ -13,25 +13,12 @@
 
   <tr valign="top">
   <td>
-    <div class="smallhdr">Incremental Binarization On Recurrent Neural Networks For Single-Channel Source Separation<img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px"></div>
+    <div class="smallhdr">Bitwise Gated Recurrent Units<img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px"></div>
 	<div class="txt">
-	 	S. Kim, M. Maity, M. Kim (ICASSP 2019)
-		Bitwise Gated Recurrent Units for Source Separation Task. Submitted for Publication.
+        Sunwoo Kim, Mrinmoy Maity, and Minje Kim (2019), "Incremental Binarization On Recurrent Neural Networks for Single-Channel Source Separation," in Proceedings of the IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP), Brighton, UK, May 12-17, 2019.
 	</div>
 	<div class="researchhdr">
-    <a target="blank" href="BGRU_Paper.pdf">Paper and audio examples</a>
-	</div>
-   </td>
-  </tr>
-
-  <tr valign="top">
-  <td>
-    <div class="smallhdr"><a target="blank" href="BGRU_Paper.pdf">Incremental Binarization On Recurrent Neural Networks For Single-Channel Source Separation</a><img src="images/inv.gif " width="13px">| <img src="images/inv.gif" width="2px"></div>
-	<div class="researchhdr">
-	 	S. Kim, M. Maity, M. Kim (ICASSP 2019)
-	</div>
-	<div class="txt">
-		Bitwise Gated Recurrent Units for Source Separation Task. Submitted for Publication.
+    <a target="blank" href="bgru.html">Paper and audio examples</a>
 	</div>
    </td>
   </tr>
