bgru page edited

--- a/bgru.html
+++ b/bgru.html
@@ -42,7 +42,7 @@
                 <table>
 	<tbody><tr>
 		<td class="text-center">
-			<img src="http://www.aswinsivaraman.com/img/figures/deep-autotuner.svg" alt="">
+			<img src="bgru_plot.png" alt="">
 		</td>
 	</tr>
 	<tr>
