bgru page edited

--- a/bgru.html
+++ b/bgru.html
@@ -42,7 +42,7 @@
                 <table>
 	<tbody><tr>
 		<td class="text-center">
-			<img src="bgru_plot.png" alt="">
+			<img src="bgru_plot.png" alt="" width="500" height="300">
 		</td>
 	</tr>
 	<tr>
