bgru page edited

--- a/bgru.html
+++ b/bgru.html
@@ -47,7 +47,10 @@
 	</tr>
 	<tr>
 		<td>
-			<small><b>Fig 1.</b> Comparison of the the manual pitch shifts (in cents) against the raw pitch information from the audio track. The network-predicted shifts are compared against the ground truth shifts on a validation performance (<em>top</em>). Every straight line segment represents a singular scalar prediction per note, and a note is spanning across several time-frequency frames. The raw pitch comparison shows that the network-predicted (autotuned) track is much closer in raw pitch to the original in-tune recording compared to the programatically de-tuned input (<em>bottom</em>).</small>
+			<small><b>Fig 1.</b> 
+                Performance in SDR on incremental levels of quantization &pi;. 
+            </small>
+
 		</td>
 	</tr>
 </tbody></table>
