--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
 		May 2016 <a href="https://illinois.edu/">University of Illinois at Urbana-Champaign</a><br>
 	</div>
    <td colspan="1" align="center" width="300px">
-	<img src="images/me.jpg", width="300px">	
+	<img src="images/sunwoo_lake_pic.jpg", width="300px">	
 	<table width="100%">
 	 <tr>
       <td align="right">
